tests/invalidTest/other/FuncVoid_with_return.q
# EXPECT return from void function cannot return value
def void extraRet() {
  if 1 > 0
  then return 1
}
